--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,17 @@
         <img src="images/portfolio.jpg" height="250">
         <br>
         <a target="_blank" href="https://scratch.mit.edu">
-        <img src="images/scratchlogo.png" height="100">
-        </a>
+        <img src="images/scratchlogo.png" height="100"></a>
+        <br>
+        <h1>Projects Created from Scratch!</h1>
+        <h1>Jungle Survivor 500</h1>
+        <a target="_blank" href="https://scratch.mit.edu/projects/173626434/"> 
+        <img src="images/CASH.png" height="150"> </a>
+        </p>This game my partner and I created is called Jungle Survivor 5000. At the beginning of the whole project, we were given the opportunity on creating either a story, or a game. We decided to go with the game since our objextive was to make something that would be entertaining and interactable, like a game. The game is a survival game. You have the option to choose between a female and a male. After you choose a character, the game will start. The instructions of the game are to dodge the crossbows being shot at you for a certain amount of time. Then a medal will appear across the map, and you have to touch it in order to advance to the next level. There are a total of three levels for each character, and each level the crossbows will come at the character faster. If you survive all three levels and touch the medals that will spawn at the end of each level, you win. If you continiously keep getting hit by the crossbows, your health will keep dropping, and if it gets to zero, you will lose the game.</p>
+        <br>
+        <h1>Projects Created in APP Inventor</h1>
+        <h1> Calorie Count App</h1>
+        
+       
    </body>
 </html>
